fixed new project alignment to fit better on Projects page

--- a/src/components/Style/Projects.css
+++ b/src/components/Style/Projects.css
@@ -14,9 +14,18 @@
     box-shadow: 0 0 100px #352343;
 }
 
+.project-ul {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
 .project-list-item {
     display: inline-block;
-    width: 50%;
+    width: 30%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0;
 }
 
 .btn-container {
